# NLPRust

./: Cargo.toml  LICENSE  README.md
benches/: bench_regex_tokenizer.rs
rust_libs/fast_nlp/: Cargo.toml  pyproject.toml
rust_libs/fast_nlp/src/: lib.rs
rust_libs/fast_nlp/src/parsers/: mod.rs
rust_libs/fast_nlp/src/parsers/number/: mod.rs
rust_libs/fast_nlp/src/parsers/uri/: mod.rs
rust_libs/fast_nlp/src/tokenizers/: mod.rs  regex_tokenizer.rs
rust_libs/fast_nlp/src/utils/: mod.rs
rust_libs/nlp_rust/: Cargo.toml
rust_libs/nlp_rust/benches/: benchmark_regex_tokenizer.rs
rust_libs/nlp_rust/src/: entity.rs  lib.rs
rust_libs/nlp_rust/src/parsers/number/: classes.rs  constants.rs  data.rs  logic.rs  mod.rs  normalize.rs  tokenizer.rs  utils.rs  words2num.rs
rust_libs/nlp_rust/src/tokenizers/: regex_tokenizer.rs
rust_libs/nlp_rust/src/utils/: mod.rs  sequences.rs
rust_libs/nlp_rust/tests/: test_performance.rs  test_regex_entity_parser.rs
src/: lib.rs  tokens.rs  types.rs
src/parsers/number/: classes.rs  config.rs  core.rs  data.rs  mergers.rs  mod.rs  tokenizer.rs  utils.rs  words2num.rs
src/parsers/number/tests/: test_utils.rs  test_words2num.rs
src/parsers/uri/: mod.rs  parser.rs
src/tokenizers/: city_patterns.rs  mod.rs  utils.rs
src/utils/: regex_.rs  strings.rs
tests/: test_extraction_pipeline.rs  test_number_words2num.rs  test_token.rs  test_utils.rs  test_words2num.rs
usage/: Cargo.toml
usage/src/: main.rs
