[package]
name = "nlp_rust"
version = "0.1.0"
edition = "2021"
authors = ["Elijah Manda <elijahmandajc@gmail.com>"]
license = "MIT"
repository = "https://github.com/elijahmanda/nlp_rust"
documentation = "https://docs.rs/nlp_rust"
homepage = "https://symbolic.com/nlp_rust"
description = "An NLP library written in Rust."
readme = "README.md"
keywords = ["NLP", "natural-language-processing", "rust"]
categories = ["text-processing", "data-processing"]

[dependencies]
regex = "1.5"
fancy-regex = "0.13.0"
lazy_static = "1.5.0"
serde = "1.0.208"
itertools = "0.13.0"
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.7"

[dev-dependencies]
criterion = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[badges]
travis-ci = { repository = "elijahmanda/nlp_rust" }

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
lto = true
