[package]
name = "fast_nlp"
version = "0.1.0"
edition = "2021"
authors = ["Elijah Manda <elijahmandajc@gmail.com>"]
license = "MIT"
repository = "https://github.com/elijahmanda/nlp_rust"
documentation = "https://docs.rs/nlp_rust"
homepage = "https://symbolic.com/nlp_rust"
description = "An NLP library written in Rust."
readme = "README.md"
keywords = ["NLP", "natural-language-processing", "rust"]
categories = ["text-processing", "data-processing"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }

[lib]
crate-type = ["cdylib"]

[dependencies.nlp_rust]
path = "../nlp_rust"

[build-dependencies]
maturin = "1.7.0"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = true
lto = true
